--- a/ui/style.css
+++ b/ui/style.css
@@ -40,11 +40,11 @@ body {
   .container{
             
         
-            max-width: 850;
+            max-width: 850px;
             margin: 0 auto;
             color: #333232;
             font-family: "sans-serif";
-            padding-left: 10;
-            padding-right: 10;
+            padding-left: 10px;
+            padding-right: 10px;
         }   
 
